--- a/api/package.json
+++ b/api/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.975.0",
     "cors": "^2.8.6",
     "express": "^5.2.1",
     "install": "^0.13.0",
     "ioredis": "^5.9.2",
     "multer": "^2.0.2",
+    "multer-s3": "^3.0.1",
     "npm": "^11.8.0"
   }
 }
